Added time check and ShutDownOnSuccess use case